# cpp-learn

./: .gitignore  0_copy_semantics.cc  0_demo.cc  0_memory_leak_demo.cpp  10_bank_transfer_wait_notify.cpp  11_async_task.cpp  12_packaged_task.cpp  13_promise_future.cpp  14_parallel_algorithm.cpp  1_construct_string.cpp  1_features.cc  1_hello_thread.cpp  1_move_and_destructor.cc  1_move_semantics.cc  1_smart_pointer.cpp  2_forward.cc  2_input_string.cpp  2_thread_self_manage.cpp  3_call_once.cpp  3_use_string.cpp  4_allocate_memory_for_string.cpp  4_naive_multithread.cpp  5_mutex_lock.cpp  5_string_to_char_arr.cpp  6_improved_mutex_lock.cpp  7_deadlock_bank_transfer.cpp  8_improved_bank_transfer.cpp  9_lock_guard.cpp  CMakeLists.txt  LICENSE  README.md  build.sh  command.sh  hello.ipynb  init_env.sh  main.cc  main.cpp  main_test.cc  memalloc.c  mutex.cpp  (+19 more)
.github/workflows/: build.yml
000_version/: CMakeLists.txt
001_asio/: CMakeLists.txt  demo.cc
00_ld_preload/: README.md  random_num.c  run.sh  unrandom.c
01_dll/: CMakeLists.txt
01_dll/1_reload/: CMakeLists.txt  hello.cc  main.cc  reload.h  run.sh
01_dll/2_reload/: CMakeLists.txt  hello.cc  hello.h  main.cc  reload.h  run.sh
01_dll/3_reload/: CMakeLists.txt  run.sh
01_dll/3_reload/hello/include/: hello.h
01_dll/3_reload/hello/src/: hello.cc
01_dll/3_reload/main/: CMakeLists.txt
01_dll/3_reload/main/src/: main.cc
01_dll/3_reload/reload/include/: reload.h
01_dll/4_reload/: CMakeLists.txt  run.sh
01_dll/4_reload/hello/: CMakeLists.txt
01_dll/4_reload/hello/include/: hello.h
01_dll/4_reload/hello/src/: hello.cc
01_dll/4_reload/main/src/: main.cc
01_dll/4_reload/reload/: CMakeLists.txt
01_dll/4_reload/reload/include/: reload.h
01_dll/4_reload/test/: CMakeLists.txt
01_dll/4_reload/test/src/: test.cc
02_lua/: .gitignore  CMakeLists.txt  hello.lua  main.cc  run.sh  testlib.cc
bak/chapter-1/1.3/: comment.cc
bak/chapter-1/1.4/: build_loop.sh  input.txt  loop.cc
bak/chapter-1/1.5/: add_item2.cc  add_item_data.txt  add_item_data2.txt  build_add_item.sh  build_item_io.sh  build_item_io2.sh  item_io_data.txt
bak/chapter-2/2.1/: build_unsigned.sh  literals.cc
cJSON/: CMakeLists.txt
chapter-1/1.1/: build.sh  err_code.cc
chapter-1/1.2/: build.sh  io.cc
chapter-1/1.3/: build.sh
chapter-1/1.4/: build_if.sh  if.cc
chapter-1/1.5/: add_item.cc  build_add_item2.sh  item_io.cc  item_io2.cc  sales_item.h
chapter-1/1.6/: avg_price.cc  book_sales.txt  build_avg_price.sh
chapter-2/2.1/: build_literals.sh  build_type_convs.sh  type_convs.cc  unsigned.cc
cmake/: common.cmake
constructor/: explicit.ipynb
cpp20_demo/: CMakeLists.txt  cpp_20_demo.cc  cpp_20_demo_build.sh
demo/: run_dll.go  run_dll.py
float/: float.ipynb
hello/: xmake.lua
jdk_demo/: pom.xml
jdk_demo/src/main/java/io/github/jasonkayzk/java/: Add.java  DllRun.java
jdk_demo/src/main/java/io/github/jasonkayzk/kotlin/: Add.kt  DllRun.kt
lib/: CMakeLists.txt  my_dll.cpp  my_dll.h
math/: CMakeLists.txt  MathUtils.cpp  MathUtils.h
oop/: object_slicing.ipynb
p1_magic/: 1_macro_demo.cc  2_compile_time_reflect.cc  3_scienum.cc  CMakeLists.txt  README.md
scripts/: init-env.sh
setjmp_demo/: CMakeLists.txt  setjmp_demo.cc  setjmp_demo_build.sh
src/: main.cc
src/handler/: HelloHandler.h
stack_co/: CMakeLists.txt  README.md  build.sh  context.cc  context.h  coroutine.cc  coroutine.h  environment.cc  environment.h  stack_co_test.cc  status.h  switch_context.S  utils.h
stackless_co/: CMakeLists.txt  README.md  build.sh  coroutine.cc  coroutine.h  schedule.cc  schedule.h  stackless_co_test.cc  utils.h
template/: func_template.ipynb  object_template.ipynb
test/: CMakeLists.txt  tests.cc
test/utils/: m_function.h  m_jthread.h  m_log.h  m_test_util.h  main.cc
thread/: thread_with_struct.ipynb
tuple/: tuple.ipynb
value-category/: value-category.ipynb
